err/mdbtools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mdbtools'...
Compiling './lib/python3.5/site-packages/mdbtools/MDBnetrc.py'...
***   File "./lib/python3.5/site-packages/mdbtools/MDBnetrc.py", line 56
    print "No authentication information found for %s in %s." % (host, self.file)
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdbtools/MDBtool.py'...
***   File "./lib/python3.5/site-packages/mdbtools/MDBtool.py", line 73
    print '#'
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mdbtools/mdbload.py'...
***   File "./lib/python3.5/site-packages/mdbtools/mdbload.py", line 62
    print 'No rows to insert for '+collection
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mdbtools/mdbmv.py'...
***   File "./lib/python3.5/site-packages/mdbtools/mdbmv.py", line 37
    print "Renaming collection %s to %s" % (original, opts.new_name)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdbtools/mdbquery.py'...
***   File "./lib/python3.5/site-packages/mdbtools/mdbquery.py", line 59
    print '%-16s%-50s%-24s%-12s%-18s%-16s%7.2f%%%+11s%+9s' % (collection.name, query[1:49],
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mdbtools/mdbstats.py'...
***   File "./lib/python3.5/site-packages/mdbtools/mdbstats.py", line 75
    print "\n"+options.header
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mdbtools/mdbtouch.py'...
***   File "./lib/python3.5/site-packages/mdbtools/mdbtouch.py", line 47
    print "Please specify one or more names of collections to create."
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mdbtools/tictoc.py'...
***   File "./lib/python3.5/site-packages/mdbtools/tictoc.py", line 24
    print self.prefix + message + " %6.3f sec" % elapsed
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mdbtools-0.3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
